--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="apple-touch-icon" href="./assets/img/apple-touch-icon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,800|Roboto+Condensed:400,800" rel="stylesheet">
   <title>Speed Up's Page</title>
-  <audio autoplay="" loop=""> <source src="./assets/music/1s.wav"></audio>
+  <audio autoplay="" loop=""> <source src="./assets/music/1s.mp3"></audio>
   <!-- RESET CSS -->
   <link type="text/css" href="./assets/css/reset.css" rel="stylesheet">
   <!-- Spicr CSS -->
